Fix overflow scroll with overlap on category button shadow

--- a/frontend/src/stylesheets/components/challenge/_challenge_index.scss
+++ b/frontend/src/stylesheets/components/challenge/_challenge_index.scss
@@ -64,7 +64,8 @@
   pointer-events: auto;
   min-width: 208px;
   padding: 5px 0;
-  margin: 2px 0 0;
+  margin: 2px;
+  margin-top: 10px;
   background-clip: padding-box;
   border-radius: .25rem;
   z-index: 3000;
